--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 /* Styling for intro section */
 #intro {
@@ -112,7 +114,7 @@ body {
 
 #lychee_title {
   grid-area: 2/1/4/2;
-  font-size: 7rem;
+  font-size: 4rem;
   font-weight: 700;
 }
 
@@ -123,14 +125,14 @@ body {
 
 #lychee_des {
   grid-area: 3/1/6/2;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: 500;
-  padding: 5% 10%;
+  padding: 15% 5%;
   line-height: 2.5rem;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0rem;
   margin: auto;
   color: #ff8080;
-  text-align: justify;
+  text-align: center;
 }
 
 #lychee_des .word {
