--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  max-width: 100%;
-  overflow-x: hidden;
 }
 /* Styling for intro section */
 #intro {
