--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ body {
   line-height: 3rem;
   margin: auto;
   color: #ff8080;
-  text-align: justify;
+  text-align: center;
 }
 
 #lychee_des .word {
