--- a/css/styles.css
+++ b/css/styles.css
@@ -75,10 +75,11 @@ body {
   line-height: 6rem;
 }
 
-/* Styling for lychee, papaya, durian */
+/* Styling for lychee, papaya, durian, custard apple */
 #lychee,
 #papaya,
-#durian {
+#durian,
+#custard {
   height: 100vh;
   width: 100%;
   display: flex;
@@ -96,9 +97,14 @@ body {
   background-color: #ffee80;
 }
 
+#custard {
+  background-color: #80ff80;
+}
+
 #lychee_name,
 #papaya_name,
-#durian_name {
+#durian_name,
+#custard_name {
   font-size: 4rem;
   text-align: center;
   font-weight: 700;
@@ -114,9 +120,15 @@ body {
   color: #808000;
 }
 
+#custard_name {
+  color: #0a7a00;
+  line-height: 6rem;
+}
+
 #lychee_content,
 #papaya_content,
-#durian_content {
+#durian_content,
+#custard_content {
   position: absolute;
   height: 100vh;
   display: grid;
@@ -127,7 +139,8 @@ body {
 
 #lychee_image,
 #papaya_image,
-#durian_image {
+#durian_image,
+#custard_image {
   grid-area: 1/1/3/2;
   height: 100%;
   opacity: 0;
@@ -148,7 +161,7 @@ body {
   );
 }
 
-#papaya_image {
+#durian_image {
   -webkit-mask-box-image: -webkit-linear-gradient(
     bottom,
     transparent 0%,
@@ -157,17 +170,33 @@ body {
   );
 }
 
+#custard_image {
+  -webkit-mask-box-image: -webkit-linear-gradient(
+    bottom,
+    transparent 0%,
+    #0a7a00 40%,
+    #0a7a00 40%
+  );
+}
+
 #lychee_title,
 #papaya_title,
-#durian_title {
+#durian_title,
+#custard_title {
   grid-area: 2/1/4/2;
   font-size: 5rem;
   font-weight: 700;
 }
 
+#custard_title {
+  font-size: 4rem;
+  text-align: center;
+}
+
 #lychee_title .char,
 #papaya_title .char,
-#durian_title .char {
+#durian_title .char,
+#custard_title .char {
   color: #ff8080;
   opacity: 0;
 }
@@ -180,9 +209,14 @@ body {
   color: #ffee80;
 }
 
+#custard_title .char {
+  color: #80ff80;
+}
+
 #lychee_des,
 #papaya_des,
-#durian_des {
+#durian_des,
+#custard_des {
   grid-area: 3/1/6/2;
   font-size: 1.5rem;
   font-weight: 500;
@@ -201,15 +235,21 @@ body {
   color: #ffee80;
 }
 
+#custard_des {
+  color: #80ff80;
+}
+
 #lychee_des .word,
 #papaya_des .word,
-#durian_des .word {
+#durian_des .word,
+#custard_des .word {
   opacity: 0;
 }
 
 #to_papaya,
 #to_durian,
-#to_custard {
+#to_custard,
+#to_mangosteen {
   opacity: 0;
   color: #d75300;
   text-align: center;
@@ -225,6 +265,10 @@ body {
 
 #to_custard {
   color: #0a7a00;
+}
+
+#to_mangosteen {
+  color: #55006e;
 }
 
 @media only screen and (min-width: 600px) {
@@ -262,24 +306,31 @@ body {
     line-height: 10rem;
   }
 
-  /* Styling for lychee */
+  /* Styling for lychee, papaya, durian */
   #lychee_name,
   #papaya_name,
-  #durian_name {
+  #durian_name,
+  #custard_name {
     font-size: 6rem;
     font-weight: 900;
   }
 
   #lychee_title,
   #papaya_title,
-  #durian_title {
+  #durian_title,
+  #custard_title {
     font-size: 9rem;
     font-weight: 900;
   }
 
+  #custard_title {
+    font-size: 6rem;
+  }
+
   #lychee_des,
   #papaya_des,
-  #durian_des {
+  #durian_des,
+  #custard_des {
     font-size: 2.5rem;
     letter-spacing: 0.2rem;
     font-weight: 500;
@@ -290,7 +341,8 @@ body {
 
   #to_papaya,
   #to_durian,
-  #to_custard {
+  #to_custard,
+  #to_mangosteen {
     font-size: 6rem;
     font-weight: 900;
     line-height: 10rem;
