fix desktop view

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ body {
 
 #custard_name {
   color: #0a7a00;
+  font-size: 3.5rem;
 }
 
 #lychee_content,
@@ -185,6 +186,11 @@ body {
   grid-area: 2/1/4/2;
   font-size: 5rem;
   font-weight: 700;
+}
+
+/* fix sweetsop title size for phone view*/
+#custard_title {
+  font-size: 4rem;
 }
 
 #lychee_title .char,
