--- a/css/styles.css
+++ b/css/styles.css
@@ -75,11 +75,12 @@ body {
   line-height: 6rem;
 }
 
-/* Styling for lychee, papaya, durian, custard apple */
+/* Styling for lychee, papaya, durian, sweetsop, mangosteen */
 #lychee,
 #papaya,
 #durian,
-#custard {
+#custard,
+#mangosteen {
   height: 100vh;
   width: 100%;
   display: flex;
@@ -101,10 +102,15 @@ body {
   background-color: #80ff80;
 }
 
+#mangosteen {
+  background-color: #bb80ff;
+}
+
 #lychee_name,
 #papaya_name,
 #durian_name,
-#custard_name {
+#custard_name,
+#mangosteen_name {
   font-size: 4rem;
   text-align: center;
   font-weight: 700;
@@ -125,10 +131,16 @@ body {
   font-size: 3.5rem;
 }
 
+#mangosteen_name {
+  color: #55006e;
+  font-size: 3rem;
+}
+
 #lychee_content,
 #papaya_content,
 #durian_content,
-#custard_content {
+#custard_content,
+#mangosteen_content {
   position: absolute;
   height: 100vh;
   display: grid;
@@ -140,7 +152,8 @@ body {
 #lychee_image,
 #papaya_image,
 #durian_image,
-#custard_image {
+#custard_image,
+#mangosteen_image {
   grid-area: 1/1/3/2;
   height: 100%;
   opacity: 0;
@@ -179,10 +192,20 @@ body {
   );
 }
 
+#mangosteen_image {
+  -webkit-mask-box-image: -webkit-linear-gradient(
+    bottom,
+    transparent 0%,
+    #55006e 40%,
+    #55006e 40%
+  );
+}
+
 #lychee_title,
 #papaya_title,
 #durian_title,
-#custard_title {
+#custard_title,
+#mangosteen_title {
   grid-area: 2/1/4/2;
   font-size: 5rem;
   font-weight: 700;
@@ -190,13 +213,18 @@ body {
 
 /* fix sweetsop title size for phone view*/
 #custard_title {
-  font-size: 4rem;
+  font-size: 3.5rem;
+}
+
+#mangosteen_title {
+  font-size: 3rem;
 }
 
 #lychee_title .char,
 #papaya_title .char,
 #durian_title .char,
-#custard_title .char {
+#custard_title .char,
+#mangosteen_title .char {
   color: #ff8080;
   opacity: 0;
 }
@@ -213,10 +241,15 @@ body {
   color: #80ff80;
 }
 
+#mangosteen_title .char {
+  color: #bb80ff;
+}
+
 #lychee_des,
 #papaya_des,
 #durian_des,
-#custard_des {
+#custard_des,
+#mangosteen_des {
   grid-area: 3/1/6/2;
   font-size: 1.5rem;
   font-weight: 500;
@@ -239,17 +272,23 @@ body {
   color: #80ff80;
 }
 
+#mangosteen_des {
+  color: #bb80ff;
+}
+
 #lychee_des .word,
 #papaya_des .word,
 #durian_des .word,
-#custard_des .word {
+#custard_des .word,
+#mangosteen_des .word {
   opacity: 0;
 }
 
 #to_papaya,
 #to_durian,
 #to_custard,
-#to_mangosteen {
+#to_mangosteen,
+#to_end {
   opacity: 0;
   color: #d75300;
   text-align: center;
@@ -269,6 +308,10 @@ body {
 
 #to_mangosteen {
   color: #55006e;
+}
+
+#to_end {
+  color: #000000;
 }
 
 @media only screen and (min-width: 600px) {
@@ -310,7 +353,8 @@ body {
   #lychee_name,
   #papaya_name,
   #durian_name,
-  #custard_name {
+  #custard_name,
+  #mangosteen_name {
     font-size: 6rem;
     font-weight: 900;
   }
@@ -318,7 +362,8 @@ body {
   #lychee_title,
   #papaya_title,
   #durian_title,
-  #custard_title {
+  #custard_title,
+  #mangosteen_title {
     font-size: 9rem;
     font-weight: 900;
   }
@@ -326,7 +371,8 @@ body {
   #lychee_des,
   #papaya_des,
   #durian_des,
-  #custard_des {
+  #custard_des,
+  #mangosteen_des {
     font-size: 2.5rem;
     letter-spacing: 0.2rem;
     font-weight: 500;
@@ -338,7 +384,8 @@ body {
   #to_papaya,
   #to_durian,
   #to_custard,
-  #to_mangosteen {
+  #to_mangosteen,
+  #to_end {
     font-size: 6rem;
     font-weight: 900;
     line-height: 10rem;
